part1/manifests/log-reader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-reader-service
spec:
  type: ClusterIP
  selector:
    app: log-reader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
